# devloop

./: .gitignore  CONTEXT.md  README.md  docker-compose.yml  pyproject.toml
.devloop/: CODING_STANDARDS.md
.devloop/prompts/: implement.md
.github/workflows/: build-agent-base-image.yml  build-image.yml  ci.yml  publish-devloop-chart.yml  publish-discord-bot-image.yml  publish-poller-image.yml  publish-slack-bot-image.yml  publish-temporal-worker-image.yml  publish-to-pypi.yml  release.yml
.sentrux/: rules.toml
agents/: .env.example
charts/devloop/: Chart.yaml  test-values.yaml  values.yaml
charts/devloop/templates/: NOTES.txt  _helpers.tpl  discord-bot-deployment.yaml  poller-deployment.yaml  rbac.yaml  serviceaccounts.yaml  skills-configmap.yaml  temporal-postgres.yaml  temporal-worker-deployment.yaml
charts/devloop/tests/: discord-bot_test.yaml  poller_test.yaml  projects-configmap_test.yaml  rbac_test.yaml  skills-configmap_test.yaml  temporal-postgres_test.yaml  temporal-worker_test.yaml
docs/: cloudflare-tunnel.md  getting-started.md  github-app.md  local-quickstart.md  operator-skills.md  temporal-prerequisites.md
docs/adr/: 0007-hand-rolled-agent-for-skills.md  0008-skills-convergence-directory.md  0011-pluggable-agent-runner.md
docs/examples/alert-response/: README.md  alert_response.py  allowlist.yaml  worker.py
images/agent-base/: Dockerfile  SKILLS.md  entrypoint.py  pyproject.toml  runners.py  skills.py  test_dependency_compat.py  test_dockerfile.py  test_entrypoint.py  test_human_question.py  test_project_tests.py  test_run_agent.py  test_runners.py  test_skills.py
images/agent-base/prompts/: answer.md  ci_fix.md  plan.md  pr_comment.md  remediation.md
images/agent-base/skills/improve-codebase-architecture/: SKILL.md
images/agent-base/skills/tdd/: SKILL.md
images/agent-base/skills/to-issues/: SKILL.md
images/agent-universal/: Dockerfile
images/discord-bot/: Dockerfile  activities.py  discord_client.py  test_thread_store.py
images/poller/: Dockerfile  poll.py  pyproject.toml  test_poll.py
images/slack-bot/: Dockerfile  activities.py  main.py  pyproject.toml  slack_client.py  test_activities.py  test_text_utils.py  test_thread_store.py  text_utils.py  thread_store.py
images/temporal-worker/: Dockerfile  pyproject.toml
scripts/: restart_workflows.py  wait_for_pypi.py
src/devloop/: __init__.py  _constants.py  _workflow_common.py  bench.py  cichecks.py  dev_loop.py  dev_loop_logic.py  docker_dispatch.py  execution.py  github.py  github_ops.py  k8s_jobs.py  kpi.py  messaging.py  phases.py  pr_comment.py  projects.py  schedules.py  shared.py  summarization.py  summarize_activities.py  webhook.py  webhook_deep.py  worker.py  workflows.py
src/devloop/github_ops/: __init__.py  auth.py  operations.py
src/devloop/messaging/: discord_bot.py  slack_bot.py  thread_store.py
src/devloop/phases/: __init__.py  cycle.py  execute.py  notifier.py  phase_ops.py  pipeline.py  plan.py  pr_comment.py  review.py  review_fix_pass.py
tests/: conftest.py  test_alert_response.py  test_bench.py  test_cichecks.py  test_cluster.py  test_code_quality.py  test_dev_loop.py  test_discord_bot.py  test_docker_dispatch.py  test_docs.py  test_execution.py  test_github.py  test_github_app_auth.py  test_github_comment_activity.py  test_github_ops.py  test_github_ops_auth_module.py  test_github_ops_token_param.py  test_github_webhook.py  test_job_dispatch_queue.py  test_k8s_jobs.py  test_kpi.py  test_messaging.py  test_phase_ops_io_methods.py  test_phases.py  test_pr_comment.py  test_pr_comment_phase_interface.py  test_pr_comment_workflow_callback_wiring.py  test_projects.py  test_projects_chart_sync.py  test_publish_summary.py  test_pure_logic.py  test_restart_workflows.py  test_schedules.py  test_sentrux_rules.py  test_shared_backward_compat.py  test_stub_roundtrip.py  test_summarization.py  test_summarize_changes.py  test_wait_for_pypi.py  test_webhook_deep.py  (+1 more)
tests/test_phase_modules/: test_as_int_locality.py  test_cycle.py  test_execute_phase.py  test_execute_phase_uses_subprotocol.py  test_io_duplication_removed.py  test_phase_ops.py  test_pipeline.py  test_review_fix_pass.py  test_workflow_phaseops.py
