[project]
name = "omneval-devloop"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "temporalio==1.27.2",
    "pyyaml==6.0.2",
    "kubernetes==32.0.1",
    "httpx==0.28.1",
    "fastapi==0.115.6",
    "uvicorn==0.34.0",
]

[dependency-groups]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.24",
    "httpx>=0.28",
    "ruff>=0.9",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/devloop"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
filterwarnings = ["ignore::DeprecationWarning"]
testpaths = ["tests"]
