[project]
name = "omneval-poller"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "httpx==0.28.1",
]

[dependency-groups]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.24",
]

# Flat module layout (poll.py). The image installs runtime dependencies with
# `uv pip install --system --no-cache .` and COPYs poll.py in separately, so the
# build must not auto-discover/package the modules — an empty py-modules list
# makes `pip install .` resolve dependencies only.
[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
py-modules = []

# uv project commands (uv run) install dependencies but do not build this app.
[tool.uv]
package = false
